--- a/package.json
+++ b/package.json
@@ -6,9 +6,19 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
+    "framer-motion": "^4.0.3",
+    "gsap": "^3.6.1",
+    "luxy.js": "^0.1.0",
+    "magic-scroll.js": "^1.0.8",
+    "node-sass": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-is": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "save": "^2.4.0",
+    "smooth-scrollbar": "^8.6.1",
+    "smooth-scrollbar-react": "^2.1.0",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
